# Flump

./: .cvsignore  Makefile  Makefile.in  README  TODO  cache.c  commands.c  config.c  configure.ac  data.c  database.c  debug.c  flumprc.sample  formatting.c  gdb.flump  main.c  malloc.c  misc.c  modules.c  rooms.c  signals.c  socket.c
autom4te.cache/: output.0  requests  traces.0
docs/: api.txt
includes/: cache.h  commands.h  config.h  data.h  database.h  debug.h  defs.h.in  events.h  flump.h  formatting.h  globals.h  malloc.h  misc.h  modules.h  rooms.h  signals.h  socket.h
modules/: Makefile.in
modules/core/: Makefile  Makefile.in  login.c
modules/user/: .#bingo.c.2.6  .bingo.c.swp  Makefile  Makefile.in  admin.c  adminport.c  auto.c  basic.c  basic.h  bingo.c  bingo.h  blackjack.c  bling.c  bugs.c  connect4.c  custom.c  dns.c  environment.c  games.c  info.c  lists.c  messages.c  money.c  motd.c  news.c  poker.h  privs.c  quotes.c  radio.c  rooms.c  scriptme.c  scriptme.txt  socials.c  spodtimes.c  webinfo.c
schema/: .flump.sql.swp  attributes.sql  banname.sql  bugs.sql  flump.sql  help.sql  motd.sql  mp3.sql  object.sql  prefer.sql  queue.sql  slap.sql  smess.sql  stab.sql
scripts/: backup.sh  cast  dedup.pl  gather.pl  ices.pm  mailer.pl  norm.pl  perl5.8.7.core  playsong.pl  readme.txt  scan.pl
scripts/ftp/: pure-ftpd.conf  pureftpd-mysql.conf  scan.pl  startscript
